# slow_function_warning

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: dependencies.yml  main.yml
src/: lib.rs
tests/: compiles.rs  debug_slow_function_warning.rs  slow_function_warning.rs  variables.rs
