[package]
name = "slow_function_warning"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }

[[test]]
name = "debug_slow_function_warning"
