[package]
name = "slow_function_warning"
version = "0.3.0-rc.0"
authors = ["Hrafn Orri Hrafnkelsson <hrafn@vidfjord.is>"]
edition = "2021"
description = "A simple macro that prints a warning if a function takes longer than expected"
readme = "README.md"
repository = "https://github.com/ironpeak/slow_function_warning"
keywords = ["macro", "metrics", "instrument"]
categories = ["development-tools::profiling"]
license = "MIT"

[features]
default = []

[lib]
proc-macro = true

[dependencies]
instant = "0.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }

[[test]]
name = "slow_function_warning"
